weirdstuff-dev.corrupted-mementos.38706ab0c81786aed82c970f50ba4327ad5574f9
Running as unit: run-p848373-i13428740.scope; invocation ID: fd6835137c3b4f70b246d5ea092d99c2
 Downloading crates ...
warning: spurious network error (3 tries remaining): [35] SSL connect error (TLS connect error: error:0A000126:SSL routines::unexpected eof while reading)
warning: spurious network error (2 tries remaining): [35] SSL connect error (TLS connect error: error:0A000126:SSL routines::unexpected eof while reading)
  Downloaded scale-value v0.16.3 (registry `tuna`)
   Compiling proc-macro2 v1.0.86
   Compiling unicode-ident v1.0.13
   Compiling libc v0.2.159
   Compiling version_check v0.9.5
   Compiling typenum v1.17.0
    Checking cfg-if v1.0.0
   Compiling equivalent v1.0.1
   Compiling hashbrown v0.15.0
   Compiling autocfg v1.4.0
   Compiling syn v1.0.109
   Compiling toml_datetime v0.6.8
   Compiling fnv v1.0.7
   Compiling generic-array v0.14.7
   Compiling shlex v1.3.0
   Compiling winnow v0.6.20
   Compiling cc v1.1.24
   Compiling slab v0.4.9
   Compiling radium v0.7.0
   Compiling serde v1.0.210
   Compiling indexmap v2.6.0
   Compiling once_cell v1.20.1
   Compiling quote v1.0.37
   Compiling pin-project-lite v0.2.14
   Compiling getrandom v0.2.15
    Checking byteorder v1.5.0
   Compiling syn v2.0.79
   Compiling bytes v1.7.2
   Compiling log v0.4.22
   Compiling ident_case v1.0.1
   Compiling futures-core v0.3.30
    Checking smallvec v1.13.2
   Compiling ring v0.17.8
   Compiling futures-sink v0.3.30
    Checking arrayvec v0.7.6
   Compiling thiserror v1.0.64
   Compiling memchr v2.7.4
   Compiling serde_json v1.0.128
   Compiling socket2 v0.5.7
   Compiling mio v1.0.2
   Compiling futures-io v0.3.30
   Compiling spin v0.9.8
   Compiling anyhow v1.0.89
   Compiling untrusted v0.9.0
   Compiling futures-channel v0.3.30
    Checking byte-slice-cast v1.2.2
    Checking tap v1.0.1
   Compiling futures-task v0.3.30
   Compiling toml_edit v0.22.22
   Compiling pin-utils v0.1.0
   Compiling itoa v1.0.11
    Checking subtle v2.6.1
   Compiling futures-util v0.3.30
    Checking wyz v0.5.1
    Checking funty v2.0.0
    Checking rand_core v0.6.4
   Compiling tracing-core v0.1.32
   Compiling httparse v1.9.5
    Checking bitvec v1.0.1
   Compiling rustls v0.22.4
   Compiling http v0.2.12
   Compiling lock_api v0.4.12
   Compiling ahash v0.8.11
    Checking static_assertions v1.1.0
   Compiling parking_lot_core v0.9.10
    Checking block-buffer v0.10.4
    Checking crypto-common v0.1.6
   Compiling rustls-pki-types v1.9.0
   Compiling tower-service v0.3.3
   Compiling cpufeatures v0.2.14
   Compiling strsim v0.10.0
    Checking scopeguard v1.2.0
   Compiling tinyvec_macros v0.1.1
   Compiling try-lock v0.2.5
   Compiling proc-macro-crate v3.2.0
   Compiling want v0.3.1
   Compiling tinyvec v1.8.0
    Checking digest v0.10.7
   Compiling darling_core v0.14.4
   Compiling http-body v0.4.6
   Compiling openssl-probe v0.1.5
   Compiling ryu v1.0.18
   Compiling httpdate v1.0.3
   Compiling crunchy v0.2.2
   Compiling rustls v0.21.12
   Compiling unicode-normalization v0.1.22
   Compiling sct v0.7.1
   Compiling rustls-webpki v0.101.7
    Checking parking_lot v0.12.3
    Checking signal-hook-registry v1.4.2
   Compiling strsim v0.11.1
   Compiling base64 v0.21.7
   Compiling percent-encoding v2.3.1
   Compiling unicode-bidi v0.3.15
   Compiling darling_core v0.20.10
   Compiling form_urlencoded v1.2.1
   Compiling rustls-pemfile v1.0.4
   Compiling serde_derive v1.0.210
   Compiling zerocopy-derive v0.7.35
   Compiling tokio-macros v2.4.0
   Compiling parity-scale-codec-derive v3.6.12
   Compiling impl-trait-for-tuples v0.2.2
   Compiling scale-info-derive v2.11.3
   Compiling derive_more v0.99.18
   Compiling tracing-attributes v0.1.27
    Checking zerocopy v0.7.35
   Compiling thiserror-impl v1.0.64
   Compiling tokio v1.40.0
   Compiling pin-project-internal v1.1.5
    Checking ppv-lite86 v0.2.20
    Checking rand_chacha v0.3.1
   Compiling tracing v0.1.40
    Checking rand v0.8.5
   Compiling async-trait v0.1.83
   Compiling darling_macro v0.14.4
   Compiling pin-project v1.1.5
   Compiling futures-macro v0.3.30
   Compiling darling v0.14.4
   Compiling idna v0.5.0
   Compiling rustls-webpki v0.102.8
   Compiling block-buffer v0.9.0
   Compiling digest v0.9.0
    Checking hex v0.4.3
   Compiling rustc-hash v1.1.0
   Compiling opaque-debug v0.3.1
   Compiling futures-timer v3.0.3
   Compiling winnow v0.5.40
   Compiling zeroize v1.8.1
    Checking rustc-hex v2.1.0
   Compiling tokio-util v0.7.12
    Checking parity-scale-codec v3.6.12
   Compiling tokio-stream v0.1.16
   Compiling h2 v0.3.26
    Checking scale-info v2.11.3
   Compiling beef v0.5.2
    Checking impl-codec v0.6.0
    Checking impl-serde v0.4.0
    Checking scale-type-resolver v0.2.0
   Compiling tokio-rustls v0.24.1
    Checking fixed-hash v0.8.0
   Compiling jsonrpsee-types v0.22.5
   Compiling sha-1 v0.9.8
   Compiling toml_edit v0.19.15
    Checking uint v0.9.5
   Compiling url v2.5.2
   Compiling darling_macro v0.20.10
   Compiling rustls-native-certs v0.6.3
   Compiling futures v0.3.30
   Compiling rustls-pemfile v2.2.0
   Compiling heck v0.5.0
   Compiling tower-layer v0.3.3
   Compiling base64 v0.13.1
   Compiling keccak v0.1.5
   Compiling constant_time_eq v0.3.1
   Compiling arrayref v0.3.9
   Compiling tower v0.4.13
   Compiling blake2b_simd v1.0.2
   Compiling twox-hash v1.6.3
   Compiling soketto v0.7.1
   Compiling sha3 v0.10.8
   Compiling rustls-native-certs v0.7.3
   Compiling darling v0.20.10
    Checking primitive-types v0.12.2
    Checking scale-bits v0.6.0
    Checking futures-executor v0.3.30
   Compiling tokio-rustls v0.25.0
   Compiling sha2 v0.10.8
   Compiling hyper v0.14.30
   Compiling proc-macro-error-attr v1.0.4
   Compiling allocator-api2 v0.2.18
   Compiling proc-macro-crate v1.3.1
   Compiling hashbrown v0.14.5
   Compiling sp-crypto-hashing v0.1.0
   Compiling frame-metadata v16.0.0
   Compiling scale-decode-derive v0.13.1
   Compiling proc-macro-error v1.0.4
   Compiling scale-encode-derive v0.7.1
   Compiling pkg-config v0.3.31
   Compiling vcpkg v0.2.15
    Checking scale-decode v0.13.1
    Checking jsonrpsee-core v0.22.5
    Checking scale-encode v0.7.1
   Compiling libsqlite3-sys v0.30.1
   Compiling subxt-metadata v0.37.0
   Compiling scale-typegen v0.8.0
    Checking frame-metadata v15.1.0
    Checking blake2 v0.10.6
    Checking either v1.13.0
    Checking yap v0.11.0
   Compiling hyper-rustls v0.24.2
    Checking base58 v0.2.0
   Compiling dsl_auto_type v0.1.2
    Checking jsonrpsee-client-transport v0.22.5
   Compiling derive-where v1.2.7
   Compiling diesel_table_macro_syntax v0.2.0
    Checking jsonrpsee v0.22.5
    Checking instant v0.1.13
    Checking dotenvy v0.15.7
   Compiling diesel_derives v2.2.3
   Compiling jsonrpsee-http-client v0.22.5
   Compiling subxt-codegen v0.37.0
   Compiling subxt-macro v0.37.0
    Checking diesel v2.2.4
    Checking scale-value v0.16.3
    Checking subxt-core v0.37.0
    Checking subxt v0.37.0
error[E0271]: type mismatch resolving `<DB as TypeMetadata>::MetadataLookup == &mut <DB as TypeMetadata>::MetadataLookup`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/diesel-2.2.4/src/query_builder/ast_pass.rs:220:51
    |
220 |             } => collector.push_bound_value(bind, metadata_lookup)?,
    |                                                   ^^^^^^^^^^^^^^^ types differ

For more information about this error, try `rustc --explain E0271`.
error: could not compile `diesel` (lib) due to 1 previous error
